[gd_scene load_steps=16 format=3 uid="uid://7mgaervmad11"]

[ext_resource type="Texture2D" uid="uid://rhndi8ag5i5b" path="res://Spinner Component/Default Images/Body-Fill-Left.png" id="1_tgduj"]
[ext_resource type="Script" uid="uid://7pgnfdkadf0k" path="res://Spinner Component/Scenes/Spinner/spinner.gd" id="1_wlxnq"]
[ext_resource type="Texture2D" uid="uid://cy2v22ajdkunm" path="res://Spinner Component/Default Images/Body-Fill-Right.png" id="2_2i3hg"]
[ext_resource type="Texture2D" uid="uid://3f7lycs11idh" path="res://Spinner Component/Default Images/Spinner-Body.png" id="3_oohy3"]
[ext_resource type="Texture2D" uid="uid://c308yj1sdyeok" path="res://Spinner Component/Default Images/Hit-Node-Left.png" id="4_jckkb"]
[ext_resource type="Texture2D" uid="uid://dhmkoqdydwlvg" path="res://Spinner Component/Default Images/Hit-Node-Right.png" id="5_cg6s7"]
[ext_resource type="Texture2D" uid="uid://r8d8a0462b4t" path="res://Spinner Component/Default Images/Hit-Ring-Area-Outline.png" id="6_2i3hg"]
[ext_resource type="Texture2D" uid="uid://sfscdi1uubbd" path="res://Spinner Component/Default Images/Hit-Ring-Area-Body.png" id="7_oohy3"]
[ext_resource type="Texture2D" uid="uid://ctbkhxnr48m0x" path="res://Spinner Component/Default Images/Detail-Line.png" id="8_cg6s7"]
[ext_resource type="Texture2D" uid="uid://b2erbxo8ogs38" path="res://Spinner Component/Default Images/Hit-Ring.png" id="8_jckkb"]
[ext_resource type="Texture2D" uid="uid://bkl50tp08xlaw" path="res://Spinner Component/Default Images/Node-Divider.png" id="11_lxa6x"]

[sub_resource type="Shader" id="Shader_lxa6x"]
code = "shader_type canvas_item;

uniform float brightness : hint_range(0.0, 2.0) = 1.0;

void fragment() {
	vec4 textureColor = texture(TEXTURE, UV);
	COLOR = textureColor * vec4(vec3(brightness), 1.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_2pbpi"]
shader = SubResource("Shader_lxa6x")
shader_parameter/brightness = 0.0

[sub_resource type="Shader" id="Shader_c56w7"]
code = "shader_type canvas_item;

uniform float brightness : hint_range(0.0, 2.0) = 1.0;

void fragment() {
	vec4 textureColor = texture(TEXTURE, UV);
	COLOR = textureColor * vec4(vec3(brightness), 1.0);
}
"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mq1n8"]
shader = SubResource("Shader_c56w7")
shader_parameter/brightness = 1.0

[node name="Spinner" type="Node2D"]
script = ExtResource("1_wlxnq")
KEY1_INPUT_NAME = "KEY1"
KEY2_INPUT_NAME = "KEY2"

[node name="SubRoot" type="Node2D" parent="."]
scale = Vector2(0.7, 0.7)

[node name="OuterRing" type="Node2D" parent="SubRoot"]

[node name="OuterRingAreaBody" type="Sprite2D" parent="SubRoot/OuterRing"]
texture = ExtResource("7_oohy3")

[node name="OuterRingAreaOutline" type="Sprite2D" parent="SubRoot/OuterRing"]
texture = ExtResource("6_2i3hg")

[node name="DetailLine" type="Sprite2D" parent="SubRoot/OuterRing"]
position = Vector2(-450, 0)
texture = ExtResource("8_cg6s7")

[node name="DetailLine2" type="Sprite2D" parent="SubRoot/OuterRing"]
position = Vector2(0, -450)
rotation = 1.5707964
texture = ExtResource("8_cg6s7")

[node name="DetailLine3" type="Sprite2D" parent="SubRoot/OuterRing"]
position = Vector2(2.026558e-06, 450)
rotation = 1.5707964
texture = ExtResource("8_cg6s7")

[node name="DetailLine4" type="Sprite2D" parent="SubRoot/OuterRing"]
position = Vector2(450, 0)
texture = ExtResource("8_cg6s7")

[node name="HitRing" type="Node2D" parent="SubRoot"]

[node name="HitRingSprite" type="Sprite2D" parent="SubRoot/HitRing"]
texture = ExtResource("8_jckkb")

[node name="Anchor" type="Node2D" parent="SubRoot"]

[node name="Body" type="Node2D" parent="SubRoot/Anchor"]

[node name="BodyFillLeft" type="Sprite2D" parent="SubRoot/Anchor/Body"]
material = SubResource("ShaderMaterial_2pbpi")
position = Vector2(-230, 0)
texture = ExtResource("1_tgduj")

[node name="BodyFillRight" type="Sprite2D" parent="SubRoot/Anchor/Body"]
material = SubResource("ShaderMaterial_mq1n8")
position = Vector2(230, 0)
rotation = -3.1415925
texture = ExtResource("2_2i3hg")

[node name="BodySprite" type="Sprite2D" parent="SubRoot/Anchor/Body"]
texture = ExtResource("3_oohy3")

[node name="HitNodes" type="Node2D" parent="SubRoot/Anchor"]

[node name="HitNodeLeft" type="Sprite2D" parent="SubRoot/Anchor/HitNodes"]
position = Vector2(-52, 0)
texture = ExtResource("4_jckkb")

[node name="HitNodeRight" type="Sprite2D" parent="SubRoot/Anchor/HitNodes"]
position = Vector2(54, 0)
texture = ExtResource("5_cg6s7")

[node name="NodeDivider" type="Sprite2D" parent="SubRoot/Anchor/HitNodes"]
texture = ExtResource("11_lxa6x")

[node name="Camera2D" type="Camera2D" parent="."]
